--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 #DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL=postgresql://postgres:docker@127.0.0.1:5434/lingua?serverVersion=16&charset=utf8
+DATABASE_URL=postgresql://postgres:docker@127.0.0.1:5434/lingua?serverVersion=18&charset=utf8
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
@@ -50,7 +50,9 @@ SCRAPER_CACHE_DSN="sqlite:../scraper.db"
 # Choose one of the transports below
 #MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=doctrine://messenger?auto_setup=true
+# from docker, dedicated postgres database for messages
+MESSENGER_DATABASE_URL=postgresql://messenger:messenger@127.0.0.1:5435/messenger?serverVersion=18&charset=utf8
 ###< symfony/messenger ###
 
 REDIS="redis://localhost:6379" # matches docker-compose.yml
