--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
         "ext-sqlite3": "*",
         "ext-xsl": "*",
         "ext-zip": "*",
-        "api-platform/core": "^4.2.10",
+        "api-platform/core": "^4.2.11",
         "api-platform/doctrine-orm": "^4.2.8",
         "api-platform/symfony": "^4.2.8",
         "doctrine/dbal": "^4.4.1",
-        "doctrine/doctrine-bundle": "^3.1",
+        "doctrine/doctrine-bundle": "^3.2.1",
         "doctrine/doctrine-fixtures-bundle": "^4.3.1",
         "doctrine/doctrine-migrations-bundle": "^4.0",
-        "doctrine/orm": "^3.5.8",
+        "doctrine/orm": "^3.6.0",
         "easycorp/easyadmin-bundle": "^4.27.5",
         "fguillot/json-rpc": "^1.3.1",
         "inspector-apm/inspector-symfony": ">=1.10.0",
@@ -33,26 +33,28 @@
         "nyholm/psr7": "^1.8.2",
         "paragonie/sodium_compat": "^2.4",
         "php-http/guzzle7-adapter": "^1.1",
-        "phpdocumentor/reflection-docblock": "^5.6.5",
+        "phpdocumentor/reflection-docblock": "^5.6.6",
         "phpstan/phpdoc-parser": "^2.3",
         "psr/log": "^3.0.2",
-        "survos/babel-bundle": "^2.0.83",
-        "survos/bootstrap-bundle": "^2.0.83",
-        "survos/bunny-bundle": "^2.0.83",
-        "survos/command-bundle": "^2.0.83",
-        "survos/core-bundle": "^2.0.83",
-        "survos/deployment-bundle": "^2.0.83",
-        "survos/ez-bundle": "^2.0.82",
-        "survos/jsonl-bundle": "^2.0.83",
-        "survos/lingua-bundle": "^2.0.82",
-        "survos/simple-datatables-bundle": "^2.0.83",
-        "survos/state-bundle": ">=2.0.83",
-        "survos/translator-bundle": "^2.0.83",
+        "survos/babel-bundle": "^2.0.86",
+        "survos/bootstrap-bundle": "^2.0.86",
+        "survos/bunny-bundle": "^2.0.86",
+        "survos/command-bundle": "^2.0.86",
+        "survos/core-bundle": "^2.0.85",
+        "survos/deployment-bundle": "^2.0.86",
+        "survos/ez-bundle": "^2.0.86",
+        "survos/jsonl-bundle": "^2.0.86",
+        "survos/lingua-bundle": "^2.0.85",
+        "survos/lingua-contracts": "dev-main",
+        "survos/lingua-core": "dev-main",
+        "survos/simple-datatables-bundle": "^2.0.86",
+        "survos/state-bundle": ">=2.0.86",
+        "survos/translator-bundle": "^2.0.86",
         "symfony/amqp-messenger": "^7.4||^8.0",
         "symfony/asset": "^7.4||^8.0",
         "symfony/asset-mapper": "^7.4||^8.0",
         "symfony/console": "^7.4.1||^8.0.1",
-        "symfony/doctrine-messenger": "^7.4.1||^8.0.1",
+        "symfony/doctrine-messenger": "^8.0.1",
         "symfony/dotenv": "^7.4||^8.0",
         "symfony/expression-language": "^7.4||^8.0",
         "symfony/flex": "^2.10.0",
@@ -71,7 +73,7 @@
         "symfony/ux-chartjs": "^2.31.0",
         "symfony/validator": "^7.4.2||^8.0.2",
         "symfony/yaml": "^7.4.1||^8.0.1",
-        "twig/extra-bundle": "^3.22.1",
+        "twig/extra-bundle": "^3.22.2",
         "twig/string-extra": "^3.22.1",
         "vanderlee/php-sentence": "^1.0.8",
         "zenstruck/bytes": ">=1.1"
@@ -134,7 +136,7 @@
     "require-dev": {
         "jawira/doctrine-diagram-bundle": "^1.2",
         "phpstan/phpstan": "^2.1.33",
-        "phpunit/phpunit": "^12.5.3",
+        "phpunit/phpunit": "^12.5.4",
         "roave/security-advisories": "dev-latest",
         "symfony/debug-bundle": "^7.4||^8.0",
         "symfony/maker-bundle": "^1.65.1",
