--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "doctrine/orm": "^3.6.0",
         "easycorp/easyadmin-bundle": "^4.27.5",
         "fguillot/json-rpc": "^1.3.1",
-        "inspector-apm/inspector-symfony": ">=1.10.0",
+        "inspector-apm/inspector-symfony": "^1.10",
         "nelmio/cors-bundle": "^2.6",
         "nyholm/psr7": "^1.8.2",
         "paragonie/sodium_compat": "^2.4",
