--- a/composer.json
+++ b/composer.json
@@ -36,20 +36,20 @@
         "phpdocumentor/reflection-docblock": "^5.6.6",
         "phpstan/phpdoc-parser": "^2.3",
         "psr/log": "^3.0.2",
-        "survos/babel-bundle": "^2.0.88",
-        "survos/bootstrap-bundle": "^2.0.88",
-        "survos/bunny-bundle": "^2.0.88",
-        "survos/command-bundle": "^2.0.88",
-        "survos/core-bundle": "^2.0.88",
-        "survos/deployment-bundle": "^2.0.88",
-        "survos/ez-bundle": "^2.0.88",
-        "survos/jsonl-bundle": "^2.0.88",
-        "survos/lingua-bundle": "^2.0.85",
-        "survos/lingua-contracts": "dev-main",
-        "survos/lingua-core": "dev-main",
-        "survos/simple-datatables-bundle": "^2.0.88",
-        "survos/state-bundle": ">=2.0.88",
-        "survos/translator-bundle": "^2.0.88",
+        "survos/babel-bundle": "^2.0.89",
+        "survos/bootstrap-bundle": "^2.0.89",
+        "survos/bunny-bundle": "^2.0.89",
+        "survos/command-bundle": "^2.0.89",
+        "survos/core-bundle": "^2.0.89",
+        "survos/deployment-bundle": "^2.0.89",
+        "survos/ez-bundle": "^2.0.89",
+        "survos/jsonl-bundle": "^2.0.89",
+        "survos/lingua-bundle": "^2.0.89",
+        "survos/lingua-contracts": "^2.0.89",
+        "survos/lingua-core": "^2.0.89",
+        "survos/simple-datatables-bundle": "^2.0.89",
+        "survos/state-bundle": "^2.0.89",
+        "survos/translator-bundle": "^2.0.89",
         "symfony/amqp-messenger": "^7.4||^8.0",
         "symfony/asset": "^7.4||^8.0",
         "symfony/asset-mapper": "^7.4||^8.0",
@@ -68,7 +68,7 @@
         "symfony/serializer": "^7.4.2||^8.0.2",
         "symfony/string": "^7.4||^8.0.1",
         "symfony/translation": "^7.4||^8.0.1",
-        "symfony/translation-contracts": ">=3.6.1",
+        "symfony/translation-contracts": "^3.6.1",
         "symfony/twig-bundle": "^7.4||^8.0",
         "symfony/ux-chartjs": "^2.31.0",
         "symfony/validator": "^7.4.2||^8.0.2",
@@ -76,7 +76,7 @@
         "twig/extra-bundle": "^3.22.2",
         "twig/string-extra": "^3.22.1",
         "vanderlee/php-sentence": "^1.0.8",
-        "zenstruck/bytes": ">=1.1"
+        "zenstruck/bytes": "^1.1"
     },
     "config": {
         "allow-plugins": {
